--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 
 body {
   font-family: "Inter", sans-serif;
-  background-color: #0c111f;
+  background-color: #ffffff;
   color: var(--color-text);
   line-height: 1.5;
   min-height: 100vh;
